--- a/static/index.html
+++ b/static/index.html
@@ -7,26 +7,52 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore.js"></script>
 
     <!-- load app module _after_ angular (otherwise you'll get 'angular not defined') -->
+    <script src="js/angular-elastic-input.min.js"/></script>
     <script src="js/my-app.js"/></script>
 
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/my-app.css">
 </head>
 
 <body>
      <div class="container" ng-controller="MainController">
 
          <h3>New Transactions</h3>
-         <table class="table table-condensed table-hover">
-             <tr ng-repeat="tran in newTrans" >
-                 <td><button ng-click="ackNewTran(tran._id)">ack</button></td>
-                 <td ng-bind="tran.date"></td>
-                 <td ng-bind="tran.amount"></td>
-                 <td>{{tran.fi}} - {{tran.account}}</td>
-                 <td ng-bind="tran.omerchant"></td>
-                 <td> {{ (tran.isPending) ? "(pending)" : "" }} </td>
-             </tr>
-         </table>
+         <div ng-include="'templates/new-trans.html'">
+         </div>
+         <!-- ul class="list-unstyled">
+            <li ng-repeat="tran in newTrans" >
+                <div>
+                    <div>
+                        <span ng-bind="tran.date"></span>
+                        <span ng-bind="tran.amount"></span>
+                        <span>{{tran.fi}} - {{tran.account}}</span>
+                        <span ng-bind="tran.omerchant"></span>
+                        <span> {{ (tran.isPending) ? "(pending)" : "" }} </span>
+                    </div>
+                    <div>
+                        <span ng-repeat="tag in tran.tags" class="span-tag">{{tag}}</span>
+                        <form class="form-tag" ng-submit="onFormSubmit()" ng-controller="TagFormController">
+                            <span> 
+                                <input type="text" 
+                                       class="input-tag form-control input-sm" 
+                                       pu-elastic-input 
+                                       style="min-width: 60px; max-width: 100px;"
+                                       ng-model="tagString" 
+                                       ng-change="onTagInputChange()"
+                                       placeholder="+ tag" />
+                            </span>
+                        </form>
+                        <form class="form-tag">
+                            <span>
+                                <button class="btn btn-primary btn-sm" ng-click="ackNewTran(tran._id)">ack</button>
+                            </span>
+                        </form>
+                    </div>
+                </div>
+             </li>
+         </ul -->
 
          <h3>Accounts</h3>
          <table class="table table-condensed table-hover">
