--- a/static/index.html
+++ b/static/index.html
@@ -17,93 +17,112 @@
     <!-- link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css" -->
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/my-app.css">
+
+    <!-- Angular Material style sheet -->
+    <link rel="stylesheet" href="css/angular-material.css">
+  
+    <!-- Angular Material requires Angular.js Libraries -->
+    <script src="js/angular-animate.js"></script>
+    <script src="js/angular-aria.js"></script>
+    <script src="js/angular-messages.js"></script>
+
+    <!-- Angular Material Library -->
+    <script src="js/angular-material.js"></script>
+
 </head>
 
 <body>
     <div id="tm-page-header" class="container-fluid">
         <div class="container">
             <a href="/">Thinmint</a>
+            <a href="/trans.html">Transactions</a>
         </div>
     </div>
 
-    <div class="container" ng-controller="MainController">
+    <div class="container">
 
-        <div class="tm-portal">
+        <div class="tm-portal" ng-controller="NewTransController">
             <h3>New Transactions</h3>
+            <img src="icons/thinking.gif" ng-if="thinking"/>
             <table class="table table-condensed table-hover tm-tran-table">
                 <tr ng-include="'templates/new-tran-th.html'"></tr>
                 <tr ng-repeat="tran in newTrans" ng-include="'templates/new-tran-tr.html'"></tr>
 
                 <tr class="tm-list-totals">
                     <th></th>
-                    <th></th>
                     <th class="text-right" tm-is-debit="{{ sumField(newTrans, 'amountValue') < 0 }}" >{{sumField(newTrans, 'amountValue') | currency}}</th>
                     <th></th>    <!-- pending -->
                     <th>Total</th>
                     <th></th>
                     <th></th>
+                    <th></th>
                 </tr>
 
             </table>
         </div>
 
-        <div class="tm-portal tm-account-list">
-            <h3>Bank &amp; Credit Accounts</h3>
-            <table class="table table-condensed table-hover">
-                <tr ng-include="'templates/account-th.html'"></tr>
-                <tr ng-repeat="account in bankAndCreditAccounts" ng-include="'templates/account-tr.html'"></tr>
+        <div ng-controller="AccountSummaryController">
+            <div class="tm-portal tm-account-list">
+                <h3>Bank &amp; Credit Accounts</h3>
+                <table class="table table-condensed table-hover">
+                    <tr ng-include="'templates/account-th.html'"></tr>
+                    <tr ng-repeat="account in bankAndCreditAccounts" ng-include="'templates/account-tr.html'"></tr>
 
-                <tr class="tm-account-list-total">
-                    <th class="text-right" tm-is-debit='{{ sumField(bankAndCreditAccounts,"value") < 0 }}'>{{ sumField(bankAndCreditAccounts,"value") | currency }}</th>
-                    <th>Total</th>
-                    <th class="text-right" tm-is-debit='{{ sumField(bankAndCreditAccounts,"last7days") < 0 }}'>{{ sumField(bankAndCreditAccounts,"last7days") | currency }}</th>
-                    <th class="text-right" tm-is-debit='{{ sumField(bankAndCreditAccounts,"last30days") < 0 }}'>{{ sumField(bankAndCreditAccounts,"last30days") | currency }}</th>
-                    <th class="text-right" tm-is-debit='{{ sumField(bankAndCreditAccounts,"last90days") < 0 }}'>{{ sumField(bankAndCreditAccounts,"last90days") | currency }}</th>
-                    <th class="text-right" tm-is-debit='{{ sumField(bankAndCreditAccounts,"last365days") < 0 }}'>{{ sumField(bankAndCreditAccounts,"last365days") | currency }}</th>
-                    <th></th>
-                </tr>
-            </table>
-        </div>
+                    <tr class="tm-account-list-total">
+                        <th class="text-right" tm-is-debit='{{ bankAndCreditAccountsSums["value"] < 0 }}'>{{ bankAndCreditAccountsSums["value"] | currency }}</th>
+                        <th>Total</th>
+                        <th class="text-right" tm-is-debit='{{ bankAndCreditAccountsSums["last7days"] < 0 }}'>{{ bankAndCreditAccountsSums["last7days"] | currency }}</th>
+                        <th class="text-right" tm-is-debit='{{ bankAndCreditAccountsSums["last30days"] < 0 }}'>{{ bankAndCreditAccountsSums["last30days"] | currency }}</th>
+                        <th class="text-right" tm-is-debit='{{ bankAndCreditAccountsSums["last90days"] < 0 }}'>{{ bankAndCreditAccountsSums["last90days"] | currency }}</th>
+                        <th class="text-right" tm-is-debit='{{ bankAndCreditAccountsSums["last365days"] < 0 }}'>{{ bankAndCreditAccountsSums["last365days"] | currency }}</th>
+                        <th></th>
+                    </tr>
+                </table>
+            </div>
 
-        <div class="tm-portal tm-account-list">
-            <h3>Investment &amp; Other Accounts</h3>
-            <table class="table table-condensed table-hover">
-                <tr ng-include="'templates/account-th.html'"></tr>
-                <tr ng-repeat="account in investmentAccounts" ng-include="'templates/account-tr.html'"></tr>
+            <div class="tm-portal tm-account-list">
+                <h3>Investment &amp; Other Accounts</h3>
+                <table class="table table-condensed table-hover">
+                    <tr ng-include="'templates/account-th.html'"></tr>
+                    <tr ng-repeat="account in investmentAccounts" ng-include="'templates/account-tr.html'"></tr>
 
-                <tr class="tm-account-list-total">
-                    <th class="text-right" tm-is-debit='{{ sumField(investmentAccounts,"value") < 0 }}'>{{ sumField(investmentAccounts,"value") | currency }}</th>
-                    <th>Total</th>
-                    <th class="text-right" tm-is-debit='{{ sumField(investmentAccounts,"last7days") < 0 }}'>{{ sumField(investmentAccounts,"last7days") | currency }}</th>
-                    <th class="text-right" tm-is-debit='{{ sumField(investmentAccounts,"last30days") < 0 }}'>{{ sumField(investmentAccounts,"last30days") | currency }}</th>
-                    <th class="text-right" tm-is-debit='{{ sumField(investmentAccounts,"last90days") < 0 }}'>{{ sumField(investmentAccounts,"last90days") | currency }}</th>
-                    <th class="text-right" tm-is-debit='{{ sumField(investmentAccounts,"last365days") < 0 }}'>{{ sumField(investmentAccounts,"last365days") | currency }}</th>
-                    <th></th>
-                </tr>
+                    <tr class="tm-account-list-total">
+                        <th class="text-right" tm-is-debit='{{ investmentAccountsSums["value"] < 0 }}'>{{ investmentAccountsSums["value"] | currency }}</th>
+                        <th>Total</th>
+                        <th class="text-right" tm-is-debit='{{ investmentAccountsSums["last7days"] < 0 }}'>{{ investmentAccountsSums["last7days"] | currency }}</th>
+                        <th class="text-right" tm-is-debit='{{ investmentAccountsSums["last30days"] < 0 }}'>{{ investmentAccountsSums["last30days"] | currency }}</th>
+                        <th class="text-right" tm-is-debit='{{ investmentAccountsSums["last90days"] < 0 }}'>{{ investmentAccountsSums["last90days"] | currency }}</th>
+                        <th class="text-right" tm-is-debit='{{ investmentAccountsSums["last365days"] < 0 }}'>{{ investmentAccountsSums["last365days"] | currency }}</th>
+                        <th></th>
+                    </tr>
 
-                <tr>
-                    <td height="50px"> </td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
+                    <tr>
+                        <td height="50px"> </td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
 
-                <tr class="tm-account-list-total">
-                    <th class="text-right" tm-is-debit='{{ getNetWorth() < 0 }}'>{{ getNetWorth() | currency }}</th>
-                    <th>Net worth</th>
-                    <th class="text-right" tm-is-debit='{{ getNetWorthPerf( "last7days" ) < 0 }}'>{{ getNetWorthPerf( "last7days" ) | currency }}</th>
-                    <th class="text-right" tm-is-debit='{{ getNetWorthPerf( "last30days" ) < 0 }}'>{{ getNetWorthPerf( "last30days" ) | currency }}</th>
-                    <th class="text-right" tm-is-debit='{{ getNetWorthPerf( "last90days" ) < 0 }}'>{{ getNetWorthPerf( "last90days" ) | currency }}</th>
-                    <th class="text-right" tm-is-debit='{{ getNetWorthPerf( "last365days" ) < 0 }}'>{{ getNetWorthPerf( "last365days" ) | currency }}</th>
-                    <th></th>
-                </tr>
-            </table>
+                    <tr class="tm-account-list-total">
+                        <th class="text-right" tm-is-debit='{{ getNetWorth() < 0 }}'>{{ getNetWorth() | currency }}</th>
+                        <th>Net worth</th>
+                        <th class="text-right" tm-is-debit='{{ getNetWorthPerf( "last7days" ) < 0 }}'>{{ getNetWorthPerf( "last7days" ) | currency }}</th>
+                        <th class="text-right" tm-is-debit='{{ getNetWorthPerf( "last30days" ) < 0 }}'>{{ getNetWorthPerf( "last30days" ) | currency }}</th>
+                        <th class="text-right" tm-is-debit='{{ getNetWorthPerf( "last90days" ) < 0 }}'>{{ getNetWorthPerf( "last90days" ) | currency }}</th>
+                        <th class="text-right" tm-is-debit='{{ getNetWorthPerf( "last365days" ) < 0 }}'>{{ getNetWorthPerf( "last365days" ) | currency }}</th>
+                        <th></th>
+                    </tr>
+                </table>
+            </div>
         </div>
 
     </div>
+    <div id="tm-page-footer" class="container-fluid">
+    </div>
+
 </body>
 </html>
 
