--- a/static/trans.html
+++ b/static/trans.html
@@ -19,26 +19,131 @@
     <!-- link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css" -->
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/my-app.css">
+
+    <!-- Angular Material style sheet -->
+    <link rel="stylesheet" href="css/angular-material.css">
+  
+    <!-- Angular Material requires Angular.js Libraries -->
+    <script src="js/angular-animate.js"></script>
+    <script src="js/angular-aria.js"></script>
+    <script src="js/angular-messages.js"></script>
+
+    <!-- Angular Material Library -->
+    <script src="js/angular-material.js"></script>
+    
 </head>
 
 <body>
     <div id="tm-page-header" class="container-fluid">
         <div class="container">
             <a href="/">Thinmint</a>
+            <a href="/trans.html">Transactions</a>
         </div>
     </div>
 
     <div class="container" ng-controller="TranQueryController">
 
-
-        <div class="tm-portal">
-            <h3>Transactions [{{trans.length}}]</h3>
-            <table class="table table-condensed table-hover tm-tran-table">
-                <tr ng-include="'templates/tran-th.html'"></tr>
-                <tr ng-repeat="tran in trans" ng-include="'templates/tran-tr.html'"></tr>
-            </table>
+        <div class="row">
+            <div class="tm-portal">
+                <h3>Time Series: Transactions</h3>
+                <div class="text-center">
+                    <canvas id="tranChart" width="1000" height="400"></canvas>
+                </div>
+            </div>
         </div>
 
+        <div class="row">
+            <div class="col-md-6">
+                <div class="tm-portal">
+                    <h4>Tag Filter <small><a href="" ng-init="showTagList=false" ng-click="showTagList = !showTagList">(show all)</a></small></h4>
+                    <div ng-if="showTagList" class="tm-show-tags-list" >
+                        <span ng-repeat="tag in tags | orderBy " class="span-tag">{{tag}} </span>
+                    </div>
+                    <div class="tm-tag-filter-list">
+                        <span ng-repeat="tag in tagsFilter" class="span-tag">
+                            {{tag}}
+                            <a class="span-tag-x" href="" ng-click="removeTag(tag)">x</a>
+                        </span>
+                        <form class="form-tag" ng-submit="addTag()" >
+                            <input type="text" 
+                                   id="input-tag-{{tran._id}}"
+                                   class="tm-input-tag form-control input-sm" 
+                                   pu-elastic-input 
+                                   style="min-width: 100px; max-width: 150px;"
+                                   ng-model="inputTagFilter" 
+                                   tm-auto-fill="tags"
+                                   placeholder="+"
+                                   autocomplete="off" />
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="tm-portal">
+                    <h4>Date Filter</h4>
+                    <div class="text-center">
+                        <md-datepicker ng-model="startDate" md-placeholder="Start"></md-datepicker>
+                        <b class="tm-datepicker-hyphen"> &#8213; </b>
+                        <md-datepicker ng-model="endDate" md-placeholder="End"></md-datepicker>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="tm-portal">
+                    <h4>Run Query</h4>
+                    <button class="tm-tran-query-button btn btn-info btn-sm" ng-click="onQueryFormSubmit()">Go!</button>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <form class="tm-portal tm-save-query-form" ng-controller="SaveQueryFormController" > 
+                    <h4>Save Query <small>(note: you must run the query first before saving it)</small></h4>
+                    <div class="tm-md-autocomplete">
+                        <md-autocomplete md-selected-item="selectedSavedQuery" 
+                                         md-selected-item-change="onChangeSavedQuery()"
+                                         md-search-text="inputSavedQueryName" 
+                                         md-items="savedQuery in getSavedQueries(inputSavedQueryName)" 
+                                         md-item-text="savedQuery.name"
+                                         md-no-cache="true"
+                                         md-min-length="0"
+                                         md-select-on-match="true"
+                                         placeholder="Load saved query...">
+                            <md-item-template>
+                                <span md-highlight-text="searchText">{{savedQuery.name}}</span>
+                            </md-item-template>
+                        </md-autocomplete>
+                    </div>
+                    <div class="text-center">
+                        <button class="btn btn-info btn-sm" ng-click="saveQuery()">Save</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="tm-portal" >
+                <h3>Transactions [{{trans.length}} of {{transCount}}]</h3>
+                <table class="table table-condensed table-hover tm-tran-table">
+                    <tr ng-include="'templates/tran-th.html'"></tr>
+                    <tr ng-repeat="tran in trans" ng-include="'templates/tran-tr.html'"></tr>
+
+                    <tr class="tm-list-totals">
+                        <th></th>
+                        <th class="text-right" tm-is-debit="{{ transSums['amountValue'] < 0 }}" >{{ transSums['amountValue'] | currency}}</th>
+                        <th></th>    <!-- pending -->
+                        <th>Total</th>
+                        <th></th>
+                        <th></th>
+                    </tr>
+                </table>
+                <img src="icons/thinking.gif" ng-if="thinking"/>
+                <button ng-if="!areAllTransFetched && !thinking" class="btn btn-info btn-sm" ng-click="fetchNextPage()">more</button>
+            </div>
+        </div>
+    </div>
+
+    <div id="tm-page-footer" class="container-fluid">
     </div>
 
 </body>
